--- a/app/index.html
+++ b/app/index.html
@@ -19,6 +19,7 @@
 
     <script src="{{rootURL}}assets/vendor.js"></script>
     <script src="{{rootURL}}assets/invoice-tracker.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
     {{content-for "body-footer"}}
   </body>
