--- a/tests/index.html
+++ b/tests/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="{{rootURL}}assets/vendor.css">
     <link rel="stylesheet" href="{{rootURL}}assets/invoice-tracker.css">
     <link rel="stylesheet" href="{{rootURL}}assets/test-support.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
     {{content-for "head-footer"}}
     {{content-for "test-head-footer"}}
@@ -26,6 +27,7 @@
     <script src="{{rootURL}}assets/test-support.js"></script>
     <script src="{{rootURL}}assets/invoice-tracker.js"></script>
     <script src="{{rootURL}}assets/tests.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
     {{content-for "body-footer"}}
     {{content-for "test-body-footer"}}
